Registro modificado, Creación Vista Ayuda, Modificación crear servicio
Se modifico el registro de especialista con sus redirecciones, para la vista ayuda tambien se hicieron las funcionalidades para dirigirse a enviar un correo o llamar, y se modifico la vista crear servicio.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,7 @@
 
     <!-- Colores del perfil especialista -->
     <color name="edit_texts2">#E3E3E3</color>
+
+    <!-- Colores de la vista Categorias especialistas -->
+    <color name="redondeo_categorias">#CFCFCF</color>
 </resources>
