--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,8 @@
 
     <!-- Colores del perfil especialista -->
     <color name="edit_texts2">#E3E3E3</color>
+
+    <!-- Colores del perfil especialista -->
+    <color name="input_categoria">#CFCFCF</color>
+
 </resources>
