--- a/app/src/main/res/layout/perfil_especialista.xml
+++ b/app/src/main/res/layout/perfil_especialista.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/Registro"
+        android:id="@+id/txtPerfilEspecialista"
         android:layout_width="match_parent"
         android:layout_height="93dp"
         android:layout_alignParentTop="true"
@@ -19,7 +19,7 @@
         />
 
     <ImageButton
-        android:id="@+id/volver"
+        android:id="@+id/imgbtnvolver"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="27dp"
@@ -29,227 +29,245 @@
         android:scaleType="centerInside"
         android:onClick="backHome"/>
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/rectangle1"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="115dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_gravity="center"
-        android:background="@drawable/styles_perfil_especialista"
-        />
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottomNavigationView"
+        android:layout_below="@id/txtPerfilEspecialista">
 
-    <TextView
-        android:id="@+id/Nombre1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="130dp"
-        android:text="@string/edit_profile_pic"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold" />
-
-    <ImageView
-        android:id="@+id/ico_user1"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="128dp"
-        android:src="@drawable/iv_user" />
-
-    <ImageView
-        android:id="@+id/image_pencil1"
-        android:layout_width="20dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="350dp"
-        android:layout_marginTop="135dp"
-        android:src="@drawable/image_pencil" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/rectangle2"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_gravity="center"
-        android:background="@drawable/styles_perfil_especialista"
-        android:layout_below="@+id/rectangle1"
-        />
-
-    <TextView
-        android:id="@+id/Nombre2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="50dp"
-        android:text="Nombre y Apellido"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_below="@+id/Nombre1" />
-
-    <ImageView
-        android:id="@+id/ico_user2"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="48dp"
-        android:src="@drawable/iv_user"
-        android:layout_below="@+id/ico_user1"/>
-
-    <ImageView
-        android:id="@+id/image_pencil2"
-        android:layout_width="20dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="350dp"
-        android:layout_marginTop="45dp"
-        android:src="@drawable/image_pencil"
-        android:layout_below="@+id/image_pencil1"/>
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/rectangle3"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_gravity="center"
-        android:background="@drawable/styles_perfil_especialista"
-        android:layout_below="@+id/rectangle2"
-        />
-
-    <TextView
-        android:id="@+id/Nombre3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="50dp"
-        android:text="Correo"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_below="@+id/Nombre2"/>
-
-    <ImageView
-        android:id="@+id/ico_user3"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="48dp"
-        android:src="@drawable/iv_user"
-        android:layout_below="@+id/ico_user2"/>
-
-    <ImageView
-        android:id="@+id/image_pencil3"
-        android:layout_width="20dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="350dp"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/image_pencil"
-        android:layout_below="@+id/image_pencil2"/>
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/rectangle4"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_gravity="center"
-        android:background="@drawable/styles_perfil_especialista"
-        android:layout_below="@+id/rectangle3"
-        />
-
-    <TextView
-        android:id="@+id/Nombre4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="50dp"
-        android:text="Contacto"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_below="@+id/Nombre3"/>
-
-    <ImageView
-        android:id="@+id/ico_user4"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="47dp"
-        android:src="@drawable/iv_user"
-        android:layout_below="@+id/ico_user3"/>
-
-    <ImageView
-        android:id="@+id/image_pencil4"
-        android:layout_width="20dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="350dp"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/image_pencil"
-        android:layout_below="@+id/image_pencil3"/>
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/rectangle5"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_gravity="center"
-        android:background="@drawable/styles_perfil_especialista"
-        android:layout_below="@+id/rectangle4"
-        />
-
-    <TextView
-        android:id="@+id/Nombre5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="50dp"
-        android:text="Profesión"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_below="@id/Nombre4"/>
-
-    <ImageView
-        android:id="@+id/ico_user5"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="48dp"
-        android:src="@drawable/iv_user"
-        android:layout_below="@+id/ico_user4"/>
-
-    <ImageView
-        android:id="@+id/image_pencil5"
-        android:layout_width="20dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="350dp"
-        android:layout_marginTop="45dp"
-        android:src="@drawable/image_pencil"
-        android:layout_below="@+id/image_pencil4"/>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/header"
-            app:itemTextColor="@color/white"
-            app:itemIconTint="@color/item_white_menu"
-            app:labelVisibilityMode="labeled"
-            app:menu="@menu/bottom_menu"
-            android:layout_gravity="bottom" />
-    </LinearLayout>
+            android:layout_height="wrap_content">
 
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/imagen"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_marginTop="30dp"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/image_perfil"
+                app:shapeAppearanceOverlay="@style/radius4"/>
+
+            <LinearLayout
+                android:id="@+id/LLbtnsimagen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagen"
+                android:layout_marginTop="10dp"
+                android:layout_centerHorizontal="true"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnFoto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@drawable/ic_editar"
+                    android:layout_marginEnd="15dp"
+                    android:text="@string/btn_cargarfoto_perfil"/>
+
+                <Button
+                    android:id="@+id/btnEliminar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@drawable/ic_eliminar"
+                    android:text="@string/btn_eliminarfoto_perfil"
+                    />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_below="@id/LLbtnsimagen"
+                android:layout_marginTop="20dp"
+                android:id="@+id/editTextContainer"
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_centerHorizontal="true">
+
+                <TextView
+                    android:id="@+id/txtNombre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Nombre y Apellido"
+                    android:textColor="#FF000000"
+                    android:textSize="20sp"
+                    android:layout_marginStart="25dp"/>
+
+                <EditText
+                    android:id="@+id/edNombre"
+                    android:layout_width="347dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/image_rectangle1"
+                    />
+
+                <TextView
+                    android:id="@+id/txtRut"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="-0.5dp"
+                    android:layout_gravity="top"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Rut sin puntos ni guión (Ej:101234560)"
+                    android:textColor="#FF000000"
+                    android:textSize="20sp"
+                    android:layout_marginStart="30dp"
+                    />
+
+                <EditText
+                    android:id="@+id/edRut"
+                    android:layout_width="347dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/image_rectangle1"
+                    />
+
+                <TextView
+                    android:id="@+id/txtCorreo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="-0.5dp"
+                    android:layout_gravity="top"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Correo Electrónico"
+                    android:textColor="#FF000000"
+                    android:textSize="20sp"
+                    android:layout_marginStart="30dp"/>
+
+                <EditText
+                    android:id="@+id/edCorreo"
+                    android:layout_width="347dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/image_rectangle1"
+                    />
+
+                <TextView
+                    android:id="@+id/txtTelefono"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="-0.5dp"
+                    android:layout_gravity="top"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Teléfono"
+                    android:textColor="#FF000000"
+                    android:textSize="20sp"
+                    android:layout_marginStart="30dp"
+                    />
+
+                <EditText
+                    android:id="@+id/edTelefono"
+                    android:layout_width="347dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/image_rectangle1"
+                    />
+
+                <TextView
+                    android:id="@+id/TxtEspecialidad"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="-0.5dp"
+                    android:layout_gravity="top"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Profesión/Especialidad"
+                    android:textColor="#FF000000"
+                    android:textSize="20sp"
+                    android:layout_marginStart="30dp"
+                    />
+
+                <EditText
+                    android:id="@+id/edEspecialidad"
+                    android:layout_width="347dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:inputType="textEmailAddress"
+                    android:layout_gravity="center"
+                    android:background="@drawable/image_rectangle1"
+                    />
+
+                <TextView
+                    android:id="@+id/txtCambiarContraseña"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="-0.5dp"
+                    android:layout_gravity="top"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Cambiar tu contraseña"
+                    android:textColor="#FF000000"
+                    android:textSize="20sp"
+                    android:layout_marginStart="30dp"
+                    />
+
+                <EditText
+                    android:id="@+id/edNuevaContraseña"
+                    android:layout_width="347dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/image_rectangle1"
+                    />
+
+                <TextView
+                    android:id="@+id/txtConfirmaNuevaContraseña"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="-0.5dp"
+                    android:layout_gravity="top"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Confirme su nueva contraseña"
+                    android:textColor="#FF000000"
+                    android:textSize="20sp"
+                    android:layout_marginStart="30dp"
+                    />
+
+                <EditText
+                    android:id="@+id/edConfirmaNuevaContraseña"
+                    android:layout_width="347dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/image_rectangle1"
+                    />
+
+                <Button
+                    android:id="@+id/btnGuardarPerfilEspecialista"
+                    android:layout_width="275dp"
+                    android:layout_height="60dp"
+                    android:layout_below="@id/edConfirmaNuevaContraseña"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:text="Guardar Cambios"
+                    android:textSize="20sp"
+                    />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+    </ScrollView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
+        android:background="@color/header"
+        app:itemIconTint="@color/item_white_menu"
+        app:itemTextColor="@color/white"
+        app:labelVisibilityMode="labeled"
+        app:menu="@menu/bottom_menu" />
 </RelativeLayout>
