--- a/app/src/main/res/layout/portada.xml
+++ b/app/src/main/res/layout/portada.xml
@@ -75,7 +75,7 @@
             android:textSize="28sp"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="@+id/textView3"
-            android:onClick="OpenSelectUser"/>
+            android:onClick="openLogin"/>
 
         <TextView
             android:id="@+id/textView4"
@@ -100,7 +100,8 @@
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            android:onClick="openSelectUser"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
