--- a/app/src/main/res/layout/registro_especialista.xml
+++ b/app/src/main/res/layout/registro_especialista.xml
@@ -97,7 +97,7 @@
                     android:layout_marginStart="25dp"/>
 
                 <EditText
-                    android:id="@+id/edNombre"
+                    android:id="@+id/edNombre_especialista"
                     android:layout_width="347dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="5dp"
@@ -120,7 +120,7 @@
                     />
 
                 <EditText
-                    android:id="@+id/edRut"
+                    android:id="@+id/edRut_especialista"
                     android:layout_width="347dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="5dp"
@@ -142,7 +142,7 @@
                     android:layout_marginStart="30dp"/>
 
                 <EditText
-                    android:id="@+id/edCorreo"
+                    android:id="@+id/edCorreo_especialista"
                     android:layout_width="347dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="5dp"
@@ -165,7 +165,7 @@
                     />
 
                 <EditText
-                    android:id="@+id/edTelefono"
+                    android:id="@+id/edTelefono_especialista"
                     android:layout_width="347dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="5dp"
@@ -212,7 +212,7 @@
                     />
 
                 <EditText
-                    android:id="@+id/edContraseña"
+                    android:id="@+id/edContraseña_especialista"
                     android:layout_width="347dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="10dp"
@@ -235,7 +235,7 @@
                     />
 
                 <EditText
-                    android:id="@+id/edConfirmaContraseña"
+                    android:id="@+id/edConfirmaContraseña_especialista"
                     android:layout_width="347dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="10dp"
@@ -266,7 +266,7 @@
                     />
             </LinearLayout>
             <Button
-                android:id="@+id/btnRegistrarse"
+                android:id="@+id/btnRegistrarse_especialista"
                 android:layout_width="275dp"
                 android:layout_height="60dp"
                 android:layout_below="@id/editTextContainer"
