--- a/app/src/main/res/layout/perfil_especialista.xml
+++ b/app/src/main/res/layout/perfil_especialista.xml
@@ -113,7 +113,7 @@
                     android:layout_marginBottom="-0.5dp"
                     android:layout_gravity="top"
                     android:gravity="center_horizontal|center_vertical"
-                    android:text="Rut sin puntos ni guión (Ej:101234560)"
+                    android:text="Rut"
                     android:textColor="#FF000000"
                     android:textSize="20sp"
                     android:layout_marginStart="30dp"
@@ -205,7 +205,7 @@
                     android:layout_marginBottom="-0.5dp"
                     android:layout_gravity="top"
                     android:gravity="center_horizontal|center_vertical"
-                    android:text="Cambiar tu contraseña"
+                    android:text="Contraseña"
                     android:textColor="#FF000000"
                     android:textSize="20sp"
                     android:layout_marginStart="30dp"
@@ -220,34 +220,10 @@
                     android:background="@drawable/image_rectangle1"
                     />
 
-                <TextView
-                    android:id="@+id/txtConfirmaNuevaContraseña"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="-0.5dp"
-                    android:layout_gravity="top"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:text="Confirme su nueva contraseña"
-                    android:textColor="#FF000000"
-                    android:textSize="20sp"
-                    android:layout_marginStart="30dp"
-                    />
-
-                <EditText
-                    android:id="@+id/edConfirmaNuevaContraseña"
-                    android:layout_width="347dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/image_rectangle1"
-                    />
-
                 <Button
                     android:id="@+id/btnGuardarPerfilEspecialista"
                     android:layout_width="275dp"
                     android:layout_height="60dp"
-                    android:layout_below="@id/edConfirmaNuevaContraseña"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
                     android:text="Guardar Cambios"
@@ -269,5 +245,6 @@
         app:itemIconTint="@color/item_white_menu"
         app:itemTextColor="@color/white"
         app:labelVisibilityMode="labeled"
+        android:layout_marginTop="20dp"
         app:menu="@menu/bottom_menu" />
 </RelativeLayout>
