--- a/app/src/main/res/layout/seleccion_usuario.xml
+++ b/app/src/main/res/layout/seleccion_usuario.xml
@@ -81,7 +81,7 @@
         app:layout_constraintStart_toStartOf="@id/texto_seleccion"
         app:layout_constraintTop_toBottomOf="@id/texto_seleccion"
         android:layout_marginTop="60dp"
-        android:onClick="OpenRegisterSpecialist"/>
+        android:onClick="openRegisterSpecialist"/>
 
     <Button
         android:id="@+id/boton2_seleccion_user"
