se cargo la vista menu especialista con sus funcionalidades

--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -32,7 +32,7 @@
         android:text="@string/btn_perfil_home"
         android:textColor="@color/white"
         android:textSize="20sp"
-        android:onClick="openProfile"/>
+        android:onClick="openMenu"/>
 
     <ImageView
         android:id="@+id/container_image"
