--- a/app/src/main/res/layout/menu_especialista.xml
+++ b/app/src/main/res/layout/menu_especialista.xml
@@ -36,7 +36,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="115dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/white" />
+        android:background="@color/white"
+        android:onClick="openProfile"/>
 
     <TextView
         android:id="@+id/Perfil"
